--- a/css/style.css
+++ b/css/style.css
@@ -106,12 +106,12 @@ button {
   padding: 0.875rem 1.5rem;
   gap: 8px;
   cursor: pointer;
-  transition: var(--smooth);
   border: none;
 }
 button:hover {
-  background-color: #3bec0f;
+  transform: scale(0.98);
   transition: var(--smooth);
+  filter: brightness(130%);
 }
 /* header */
 header {
@@ -365,6 +365,8 @@ input:checked + .slider:before {
   align-items: center;
   justify-content: center;
   margin-top: 4.5rem;
+  pointer-events: none;
+  -webkit-touch-callout: none;
 }
 .banner_img img {
   position: absolute;
@@ -526,14 +528,18 @@ footer {
 }
 .title_container i:hover {
   color: var(--primary);
-  transform: scale(1.1);
+  transform: scale(0.9);
   transition: var(--smooth);
+  filter: brightness(140%);
 }
 .row {
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
   gap: 0.75rem;
+}
+.row h4 {
+  color: var(--field);
 }
 /* About me */
 .info {
@@ -625,10 +631,7 @@ footer {
   padding: 0 0 1.25rem 0;
   color: var(--onprimary);
   background-color: var(--field);
-}
-.category:hover {
-  transform: translateY(-0.75rem);
-  transition: var(--smooth);
+  overflow: hidden;
 }
 .category a {
   display: flex;
@@ -639,6 +642,8 @@ footer {
 }
 .category_img {
   width: 100%;
+  pointer-events: none;
+  -webkit-touch-callout: none;
 }
 .category_text {
   display: block;
@@ -669,6 +674,7 @@ footer {
   align-items: center;
   text-decoration: none;
   color: var(--onprimary);
+  overflow: hidden;
 }
 .card_text {
   display: flex;
@@ -706,6 +712,8 @@ footer {
 }
 .card_img {
   width: 100%;
+  pointer-events: none;
+  -webkit-touch-callout: none;
 }
 /* Skills */
 .skill_set {
@@ -713,7 +721,8 @@ footer {
   display: grid;
   grid-template-columns: auto auto;
   row-gap: 1rem;
-  justify-content: space-between;
+  column-gap: 0.5rem;
+  justify-content: space-around;
   justify-items: center;
   align-items: start;
 }
@@ -737,13 +746,15 @@ footer {
   display: flex;
   flex-direction: column;
   gap: 0.25rem;
-  width: 9.5rem;
+  min-width: 8rem;
+  max-width: 20rem;
 }
 .skill_text h4 {
   font-size: 1rem;
 }
 .skill_text p {
   height: 3.75rem;
+  width: auto;
   overflow: hidden;
   text-overflow: ellipsis;
 }
@@ -1003,7 +1014,7 @@ textarea::placeholder {
     align-items: flex-start;
   }
   .row h3 {
-    width: 30%;
+    width: fit-content;
   }
   .row p {
     width: 55%;
@@ -1049,6 +1060,15 @@ textarea::placeholder {
   .category {
     padding: 0 0 2rem 0;
   }
+  .category:hover {
+    transform: scale(0.96);
+    transition: var(--smooth);
+    filter: brightness(120%);
+  }
+  .category:hover .category_img {
+    transform: scale(1.05);
+    transition: var(--smooth);
+  }
   .category a {
     gap: 1rem;
   }
@@ -1063,6 +1083,7 @@ textarea::placeholder {
   }
   .card {
     flex-direction: row;
+    transition: var(--smooth);
   }
   .card:nth-child(even) {
     flex-direction: row-reverse;
@@ -1089,6 +1110,15 @@ textarea::placeholder {
     align-items: center;
     width: auto;
     height: 100%;
+    transition: var(--smooth);
+  }
+  .card:hover {
+    transform: scale(0.99);
+    transition: var(--smooth);
+  }
+  .card:hover .card_img {
+    transform: scale(1.05);
+    transition: var(--smooth);
   }
   .tag p {
     font-size: 1rem;
@@ -1096,6 +1126,7 @@ textarea::placeholder {
   /* Skills */
   .skill_set {
     grid-template-columns: auto auto auto auto;
+    column-gap: 1rem;
   }
   .skill {
     padding: 1.5rem 1.25rem 1.5rem 1.25rem;
@@ -1106,11 +1137,12 @@ textarea::placeholder {
     transition: var(--smooth);
   }
   .skill i {
-    font-size: 3rem;
+    font-size: 2.5rem;
     line-height: 3.75rem;
   }
   .skill_text {
     width: 12rem;
+    max-width: 12rem;
   }
   .skill_text h4 {
     font-size: 1.25rem;
