--- a/css/style.css
+++ b/css/style.css
@@ -445,37 +445,37 @@ input:checked + .slider:before {
 /* footer */
 footer {
   background-color: #25233a;
+  height: 35vh;
 }
 .footer {
-  position: relative;
   display: flex;
   flex-wrap: wrap;
+  flex-direction: row;
   align-content: flex-start;
   align-items: center;
-  max-width: 1040px;
-  height: 40vh;
-  padding: 1rem 1rem 0 1rem;
+  max-width: 100%;
+  height: 35vh;
+  padding: 0 1rem 0 1rem;
 }
 .footer_logo {
-  top: 0;
-  margin: 1.5rem auto 1.5rem 0;
+  width: 4rem;
+  margin: 3rem auto 3rem 0;
 }
 .footer_text {
   margin-bottom: 24px;
   color: #e0e0ef;
-  top: 40%;
-  margin: 0 auto 0 0;
+  margin: 0 0 0 auto;
   text-align: left;
 }
 .footer_text h3 {
-  margin-bottom: 4px;
+  margin-bottom: 0.25rem;
 }
 .footer_social {
   display: flex;
   justify-content: space-evenly;
-  font-size: 2rem;
+  align-items: center;
+  font-size: 1.5rem;
   width: 100%;
-  height: fit-content;
 }
 .footer_social a {
   color: #e0e0ef;
@@ -949,26 +949,27 @@ textarea::placeholder {
     right: 0rem;
     z-index: -2;
   }
+  footer{
+    height: 50vh;
+  }
   .footer {
-    position: relative;
-    display: flex;
-    flex-wrap: wrap;
-    align-content: flex-start;
-    align-items: center;
+    flex-wrap: nowrap;
     max-width: 1040px;
     height: 40vh;
-    padding: 4rem 0 0 0;
     margin: 0 auto;
+    justify-content: flex-start;
+    gap: 1.5rem;
   }
   .footer_logo {
-    margin: 1.25rem 1.25rem 1.25rem 0.5rem;
+    width: 6.25rem;
+    margin: 1.25rem 0 1.25rem 0;
   }
   .footer_text {
-    margin: 0 0 0 0;
+    margin: 0 10rem 0 0;
   }
   .footer_social {
-    width: 24rem;
-    margin: 0 0 0 20%;
+    font-size: 1.75rem;
+    width: 20rem;
   }
   /* other pages */
   .content {
@@ -1011,7 +1012,7 @@ textarea::placeholder {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: flex-start;
+    align-items: center;
   }
   .row h3 {
     width: fit-content;
