--- a/css/style.css
+++ b/css/style.css
@@ -359,9 +359,9 @@ input:checked + .slider:before {
 }
 .banner_img {
   width: 100%;
+  height: 60%;
   display: flex;
   flex-direction: column;
-  height: 60%;
   align-items: center;
   justify-content: center;
   margin-top: 4.5rem;
@@ -370,7 +370,7 @@ input:checked + .slider:before {
 }
 .banner_img img {
   position: absolute;
-  max-width: 40rem;
+  z-index: -1;
 }
 .banner_img .illustration {
   animation: MoveUpDown 3s linear infinite;
@@ -694,8 +694,12 @@ footer {
 .card_title img {
   width: 2.5rem;
 }
+.card_title h3{
+  color: var(--onprimary);
+}
 .card_text p {
   font-weight: 300;
+  color: var(--onprimary);
 }
 .tag {
   display: inline-flex;
@@ -923,11 +927,9 @@ textarea::placeholder {
   }
   .banner_img {
     margin-top: 0;
-    justify-content: flex-start;
-    height: 65%;
   }
   .banner_img img {
-    width: 56%;
+    width: 50%;
     right: -2rem;
   }
   .banner_text {
@@ -970,6 +972,11 @@ textarea::placeholder {
   .footer_social {
     font-size: 1.75rem;
     width: 20rem;
+  }
+  .footer_social a:hover{
+    transform: scale(0.9);
+    transition: var(--smooth);
+    color: #ffffff;
   }
   /* other pages */
   .content {
