--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ html {
   transition: var(--smooth);
 }
 body {
-  font-family: "Be Vietnam Pro", sans-serif;
+  font-family: 'Be Vietnam Pro', sans-serif;
   background: var(--bg);
 }
 /* typeface */
@@ -92,7 +92,7 @@ img {
 button {
   text-align: center;
   font-style: normal;
-  font-family: "Be Vietnam Pro", sans-serif;
+  font-family: 'Be Vietnam Pro', sans-serif;
   font-weight: 600;
   font-size: 1rem;
   line-height: 20px;
@@ -168,7 +168,7 @@ header {
   position: relative;
 }
 .link a::after {
-  content: "";
+  content: '';
   position: absolute;
   width: 100%;
   transform: scaleX(0);
@@ -202,7 +202,7 @@ header {
   position: relative;
 }
 .link_selected a::after {
-  content: "";
+  content: '';
   position: absolute;
   width: 100%;
   transform: scaleX(1);
@@ -251,7 +251,7 @@ header {
 }
 .slider:before {
   position: absolute;
-  content: "";
+  content: '';
   height: 16px;
   width: 16px;
   top: 6px;
@@ -319,7 +319,7 @@ input:checked + .slider:before {
 }
 .navbar_icon2:before,
 .navbar_icon2:after {
-  content: "";
+  content: '';
   position: absolute;
   width: 32px;
   height: 4px;
@@ -558,7 +558,7 @@ footer {
       rgba(61, 178, 15, 0.1),
       rgba(61, 178, 15, 0.1)
     ),
-    url("Aboutme.png");
+    url('Aboutme.png');
   background-size: cover;
   background-repeat: no-repeat;
   mix-blend-mode: normal;
@@ -588,7 +588,7 @@ footer {
   right: 0;
 }
 .profilepic:active {
-  background: url("Aboutme.png");
+  background: url('Aboutme.png');
   background-size: cover;
   background-repeat: no-repeat;
   width: 11rem;
@@ -721,26 +721,27 @@ footer {
 }
 /* Branding */
 .brand_list {
-  max-width: 100%;
+  width: 100%;
   display: grid;
   grid-template-columns: 50% 50%;
   row-gap: 1rem;
-  column-gap: 0.5rem;
+  column-gap: 1rem;
   justify-content: space-around;
   justify-items: center;
   align-items: center;
+  padding: 0 1rem;
 }
 .brand {
   display: flex;
   border-radius: 12px;
-  width: 95%;
-  padding: 2.5rem 3rem;
+  width: 100%;
+  height: 11.25rem;
   align-items: center;
   justify-content: center;
   background-color: var(--field);
 }
 .brand svg {
-  width: 4rem;
+  transform: scale(0.75);
   color: var(--onsurface);
   opacity: 0.8;
 }
@@ -1024,7 +1025,7 @@ textarea::placeholder {
     margin: 0rem 1.125rem;
   }
   .link_selected a::after {
-    content: "";
+    content: '';
     position: absolute;
     width: 100%;
     transform: scaleX(1);
@@ -1063,7 +1064,7 @@ textarea::placeholder {
     height: 16rem;
   }
   .profilepic:hover {
-    background: url("Aboutme.png");
+    background: url('Aboutme.png');
     background-size: cover;
     background-repeat: no-repeat;
     width: 15rem;
@@ -1159,17 +1160,16 @@ textarea::placeholder {
   }
   /* Branding */
   .brand_list {
-    grid-template-columns: auto auto auto auto;
-    column-gap: 1rem;
-    justify-content: space-between;
+    width: 100%;
+    grid-template-columns: 25% 25% 25% 25%;
     transition: var(--smooth);
   }
   .brand {
-    width: 100%;
-    padding: 4rem;
+    width: 96%;
+    height: 14.75rem;
   }
   .brand svg {
-    width: 6.25rem;
+    transform: scale(0.88);
     mix-blend-mode: hard-light;
     opacity: 0.6;
   }
