--- a/css/style.css
+++ b/css/style.css
@@ -141,15 +141,17 @@ header {
 }
 /* logo */
 .header_logo {
-  z-index: 1;
+  z-index: 6;
+}
+.header_logo a {
+  display: block;
+  width: 3rem;
+  height: 3rem;
 }
 .header_logo img {
-  width: 48px;
-  height: 48px;
   object-fit: cover;
-  align-items: center;
-  cursor: pointer;
 }
+
 /* links */
 .navbar_links {
   position: fixed;
@@ -460,27 +462,28 @@ input:checked + .slider:before {
 /* footer */
 footer {
   background-color: #25233a;
-  height: 35vh;
+  height: fit-content;
 }
 .footer {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
+  gap: 1vw;
   align-content: flex-start;
   align-items: center;
-  max-width: 100%;
+  justify-content: space-evenly;
+  max-width: 1040px;
   height: 35vh;
-  padding: 0 1rem 0 1rem;
 }
 .footer_logo {
   width: 4rem;
-  margin: 3rem auto 3rem 0;
+  margin: 2rem 0;
 }
 .footer_text {
   margin-bottom: 24px;
   color: #e0e0ef;
-  margin: 0 0 0 auto;
   text-align: left;
+  margin: 3rem 0 2rem 0;
 }
 .footer_text h3 {
   margin-bottom: 0.25rem;
@@ -490,7 +493,8 @@ footer {
   justify-content: space-evenly;
   align-items: center;
   font-size: 1.5rem;
-  width: 100%;
+  gap: 3rem;
+  width: auto;
 }
 .footer_social a {
   color: #e0e0ef;
@@ -942,6 +946,16 @@ textarea::placeholder {
     line-height: 1.25rem;
     letter-spacing: 0.5px;
   }
+  .header_logo a {
+    display: block;
+    width: 3.5rem;
+    height: 3.5rem;
+  }
+  .header_logo a:hover {
+    transform: scale(0.9);
+    transition: var(--smooth);
+    filter: brightness(130%);
+  }
   .navbar_links {
     position: initial;
     transform: translateX(0);
@@ -1004,7 +1018,7 @@ textarea::placeholder {
   }
   .footer {
     flex-wrap: nowrap;
-    max-width: 1040px;
+    width: 100%;
     height: 40vh;
     margin: 0 auto;
     justify-content: flex-start;
