--- a/css/style.css
+++ b/css/style.css
@@ -393,6 +393,7 @@ input:checked + .slider:before {
   -webkit-touch-callout: none;
   transition: var(--smooth);
 }
+
 .layer {
   z-index: 0;
   width: 100%;
@@ -404,6 +405,7 @@ input:checked + .slider:before {
   width: 62%;
   left: 10%;
   bottom: 29%;
+  transition: var(--smooth);
 }
 .layer2 {
   position: absolute;
@@ -419,6 +421,18 @@ input:checked + .slider:before {
   right: 30%;
   bottom: 24%;
 }
+.illustration:hover .layer1 {
+  bottom: 32%;
+  transition: var(--smooth);
+}
+.illustration:hover .layer2 {
+  bottom: 32%;
+  transition: var(--smooth);
+}
+.illustration:hover .layer3 {
+  bottom: 26%;
+  transition: var(--smooth);
+}
 .layer4 {
   position: absolute;
   z-index: 4;
@@ -426,6 +440,8 @@ input:checked + .slider:before {
   height: 100%;
   left: 0;
   bottom: 0;
+  pointer-events: none;
+  -webkit-touch-callout: none;
 }
 .moon {
   position: absolute;
@@ -464,20 +480,59 @@ input:checked + .slider:before {
 .cloud1 {
   position: absolute;
   width: 10%;
-  top: 14%;
+  top: 18%;
   left: 44%;
+  animation: cloud1 50s linear infinite;
+  transform: var(--smooth);
+}
+@keyframes cloud1 {
+  0%,
+  100% {
+    left: 50%;
+    opacity: 0.3;
+  }
+  50% {
+    left: 28%;
+    top: 10%;
+    opacity: 0.7;
+  }
 }
 .cloud2 {
   position: absolute;
   width: 6%;
   top: 12%;
   left: 32%;
+  animation: cloud2 40s linear infinite;
+  transform: var(--smooth);
+}
+@keyframes cloud2 {
+  0%,
+  100% {
+    left: 20%;
+    opacity: 0.8;
+  }
+  50% {
+    left: 46%;
+    opacity: 0.3;
+  }
 }
 .cloud3 {
   position: absolute;
   width: 4%;
   top: 16%;
   left: 28%;
+  animation: cloud3 40s linear infinite;
+}
+@keyframes cloud3 {
+  0%,
+  100% {
+    left: 32%;
+    opacity: 0.3;
+  }
+  50% {
+    left: 20%;
+    opacity: 0.8;
+  }
 }
 .balloon {
   position: absolute;
@@ -485,12 +540,37 @@ input:checked + .slider:before {
   bottom: 60%;
   left: 28%;
   z-index: 5;
+  animation: balloon 50s linear infinite;
+  transform: var(--smooth);
 }
-
+@keyframes balloon {
+  0% {
+    bottom: 60%;
+    left: 28%;
+  }
+  14% {
+    bottom: 70%;
+    left: 12%;
+    transform: scale(0.92);
+  }
+  35% {
+    bottom: 80%;
+    left: 40%;
+    transform: scale(0.9);
+  }
+  60% {
+    bottom: 50%;
+    left: 80%;
+  }
+  100% {
+    bottom: 60%;
+    left: 28%;
+  }
+}
 .platform {
-  animation: MoveUpDown 4s linear infinite;
+  animation: platform 4s linear infinite;
 }
-@keyframes MoveUpDown {
+@keyframes platform {
   0%,
   100% {
     transform: translateY(8px);
@@ -586,6 +666,9 @@ footer {
 }
 .footer_text h3 {
   margin-bottom: 0.25rem;
+}
+.footer_text p {
+  font-size: 0.75rem;
 }
 .footer_social {
   display: flex;
@@ -1043,7 +1126,7 @@ textarea::placeholder {
     font-size: 1rem;
     font-weight: var(--body-weight);
     line-height: 1.25rem;
-    letter-spacing: 0.5px;
+    letter-spacing: 0.25px;
   }
   .header_logo a {
     display: block;
@@ -1102,6 +1185,7 @@ textarea::placeholder {
   }
   .banner_text p {
     margin-bottom: 40px;
+    line-height: 1.5rem;
   }
 
   .dec {
@@ -1128,6 +1212,10 @@ textarea::placeholder {
   }
   .footer_text {
     margin: 0 10rem 0 0;
+  }
+  .footer_text p {
+    font-size: 1rem;
+    line-height: 1.5rem;
   }
   .footer_social {
     font-size: 1.75rem;
