--- a/css/style.css
+++ b/css/style.css
@@ -114,8 +114,8 @@ img {
   line-height: 20px;
   letter-spacing: 0.5px;
   flex: none;
-  color: var(--onprimary);
-  border: 1px solid var(--onprimary);
+  color: var(--onbg);
+  border: 1px solid var(--onbg);
   border-radius: 8px;
   padding: 0.875rem 1.5rem;
   background: none;
@@ -604,10 +604,10 @@ input:checked + .slider:before {
 }
 .dec {
   position: absolute;
-  width: 40rem;
+  width: 36rem;
   top: 0rem;
   right: 0rem;
-  opacity: 0.6;
+  opacity: 0.85;
   pointer-events: none;
   -webkit-touch-callout: none;
   z-index: -2;
@@ -649,18 +649,24 @@ footer {
 }
 .footer {
   display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
+  flex-direction: column;
   gap: 1vw;
-  align-content: flex-start;
-  align-items: center;
-  justify-content: space-evenly;
   max-width: 1040px;
   height: 35vh;
+  padding: 0 1rem;
+}
+.footer_group{
+  display:flex;
+  flex-direction: row;
+  align-items: flex-end;
+  justify-content: center;
+  flex-wrap: nowrap;
+  gap:1.5rem;
 }
 .footer_logo {
   width: 4rem;
   margin: 2rem 0;
+  
 }
 .footer_text {
   margin-bottom: 24px;
@@ -671,15 +677,14 @@ footer {
 .footer_text h3 {
   margin-bottom: 0.25rem;
 }
-.footer_text p {
-  font-size: 0.75rem;
-}
 .footer_social {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
   font-size: 1.5rem;
-  gap: 3rem;
+  padding: 0 0.5rem;
+  width: 100%;
+  gap: 4rem;
   width: auto;
 }
 .footer_social a {
@@ -1188,24 +1193,26 @@ textarea::placeholder {
     margin-bottom: 40px;
     line-height: 1.5rem;
   }
-
   .dec {
-    position: absolute;
-    width: 55rem;
+    width: 50rem;
     top: 0rem;
     right: 0rem;
-    z-index: -2;
   }
   footer {
     height: 50vh;
   }
   .footer {
+    flex-direction: row;
+    align-items: center;
     flex-wrap: nowrap;
     width: 100%;
     height: 40vh;
     margin: 0 auto;
-    justify-content: flex-start;
+    justify-content: space-between;
     gap: 1.5rem;
+  }
+  .footer_group{
+    align-items: center;
   }
   .footer_logo {
     width: 6.25rem;
